--- a/Elias Kouly's CV.html
+++ b/Elias Kouly's CV.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--The link to bootstrap 5-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style-index.css" />
-    <title>Elias kouly CV</title>
+    <!--Right here I am linking to my css file, so they can communicate-->
+    <link rel="stylesheet" href="style-CV.css" />
+    <!--Giving my website a title-->
+    <title>Elias Kouly's</title>
   </head>
   <body>
-    
-    <!-- Navbar -->
+    <!--The button and dark navbar box at the top-->
     <nav class="navbar navbar-exspand-lg bg-dark navbar-dark py">
-      <div  class="container">
+      <div class="container">
         <a href="#" class="navbar-brand">Elias Kouly</a>
 
         <button
@@ -45,46 +47,20 @@
       </div>
     </nav>
 
-    
-    <!-- Showcase -->
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
-      <div class="container">
-        <div class="d-sm-flex">
-          <div>
-            <h1>I am a <span class="text-warning"> Programmer student</span></h1>
-              <h3>Student looking for intership</h3>
-            <p class="lead">
-              <span class="text-warning">Resume:</span>
-            </p>
-            <p class="lead my-4">
-              I love coding, and I love to learn new programming langueges. My goal
-              is to be able to be as good as possible. I try to learn as much as I can
-              I chose this education, because there are unlimited posibilites when it
-              comes to programming
-            </p>
-            <div >
-              <a href="Elias Kouly's CV.html">
-            <button class="btn btn-primary btn-lg float-right">My CV</button>
-          </a>
-        </div>
-          </div>
-            <img
-              class="img-fluid w-10 d-none d-sm-block"
-              src="images/CV.jpg"
-              id=roundedImage 
-            />
-          </div>
-        </div>
+    <!--The button and dark navbar box at the top-->
+    <section class="bg-dark text-light p-1 text-center text-sm-start">
+      <nav class="navbar navbar-expand-lg bg-dark navbar-dark"></nav>
+      <div class=>
+        <a href="index.html">
+          <button class="btn btn-primary btn-lg float-right">Home page</button>
+        </a>
       </div>
     </section>
-
-    <!-- Newsletter-->
-    <section class="bg-primary text-light p-5"></section>
-    <div class="container d-flex justify-content-center">
-        <div class="d-md-flex justify-content-between align-items-center">
-            <h3 class="mb-3 mb-md-0">Something interresting right here</h3>
-        </div>
+    <!--CV with borders around it-->
+    <div class="bg-white" style="width: 240px" id="back">
+      <img src="images/CV.jpg" id="rounding" class="border border-white" />
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
