Hopefully img should be fixed

--- a/Elias Kouly's CV.html
+++ b/Elias Kouly's CV.html
@@ -50,9 +50,9 @@
     <!--The button and dark navbar box at the top-->
     <section class="bg-dark text-light p-1 text-center text-sm-start">
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark"></nav>
-      <div class=>
+      <div class="">
         <a href="index.html">
-          <button class="btn btn-primary btn-lg float-right">Home page</button>
+          <button class="btn btn-primary btn-lg">Home page</button>
         </a>
       </div>
     </section>
