--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
             <img
               class="img-fluid w-10 d-none d-sm-block"
-              src="images/Cv.jpg"
+              src="images/CV.jpg"
               id=roundedImage 
             />
           </div>
