--- a/Elias Kouly's CV.html
+++ b/Elias Kouly's CV.html
@@ -58,7 +58,7 @@
     </section>
     <!--CV with borders around it-->
     <div class="bg-white" style="width: 240px" id="back">
-      <img src="images/CV.jpg" id="rounding" class="border border-white" />
+      <img src="Images/CV.jpg" id="rounding" class="border border-white" />
     </div>
 
     <script
