More buttons works.

--- a/Elias Kouly's CV.html
+++ b/Elias Kouly's CV.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#CV" class="nav-link">Elias Kouly's CV</a>
+              <a href="index.html" class="nav-link">Elias Kouly's CV</a>
             </li>
             <li class="nav-item">
               <a href="#About me" class="nav-link">About Elias Kouly</a>
@@ -50,7 +50,7 @@
     <!--The button and dark navbar box at the top-->
     <section class="bg-dark text-light p-1 text-center text-sm-start">
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark"></nav>
-      <div class="">
+      <div class="text-center">
         <a href="index.html">
           <button class="btn btn-primary btn-lg">Home page</button>
         </a>
