--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#CV" class="nav-link">Elias Kouly's CV</a>
+              <a href="Elias Kouly's CV.html" class="nav-link">Elias Kouly's CV</a>
             </li>
             <li class="nav-item">
-              <a href="#About me" class="nav-link">About Elias Kouly</a>
+              <a href="About-me.html" class="nav-link">About Elias Kouly</a>
             </li>
             <li class="nav-item">
               <a href="#Contact me" class="nav-link">Contact information</a>
@@ -51,18 +51,18 @@
       <div class="container">
         <div class="d-sm-flex">
           <div>
-            <h1>I am a <span class="text-warning"> Programmer student</span></h1>
-              <h3>Student looking for intership</h3>
-            <p class="lead">
+            <h1 class="text-center">I am a <span class="text-warning"> Programmer student</span></h1>
+              <h3 class="text-center">Student looking for intership</h3>
+            <p class="lead text-center">
               <span class="text-warning">Resume:</span>
             </p>
-            <p class="lead my-4">
+            <p class="lead my-4 text-center">
               I love coding, and I love to learn new programming langueges. My goal
               is to be able to be as good as possible. I try to learn as much as I can
               I chose this education, because there are unlimited posibilites when it
               comes to programming
             </p>
-            <div >
+            <div class="">
               <a href="Elias Kouly's CV.html">
             <button class="btn btn-primary btn-lg float-right">My CV</button>
           </a>
